# aihc

./: .clang-tidy  .gitignore  404.html  AGENTS.md  BENCHMARKS.md  PR_DESCRIPTION.md  README.md  TH_DECL_QUOTE_ISSUE.md  TypeFamilies.md  cabal.project  cabal.project.freeze  cabal.project.ghc-compat  cabal.project.wasm  cabal.project.wasm.freeze  flake.nix  index.html  justfile  pr-description.md  pr_body.txt
.cache/aihc/hackage/Clipboard-2.3.2.2/Clipboard-2.3.2.2/: Clipboard.cabal  changelog.md
.cache/aihc/hackage/amqp-utils-0.6.7.3/amqp-utils-0.6.7.3/: ChangeLog.md  README.md  Setup.hs  agitprop.hs  amqp-utils.cabal  arbeite.hs  konsum.hs  plane.hs
components/aihc-arm64/: aihc-arm64.cabal
components/aihc-arm64/runtime/: aihc_runtime.c  aihc_runtime.h  aihc_snapshot.c
components/aihc-arm64/src/Aihc/: Arm64.hs
components/aihc-arm64/test/: Spec.hs
components/aihc-c/: LICENSE  aihc-c.cabal
components/aihc-c/src/Aihc/: C.hs
components/aihc-c/test/: Spec.hs
components/aihc-cpp/: CHANGELOG.md  README.md  aihc-cpp.cabal
components/aihc-cpp/src/: Cpp.hs
components/aihc-cpp/src/Aihc/: Cpp.hs
components/aihc-cpp/test/: Spec.hs
components/aihc-cpp/test/Test/: Golden.hs  Progress.hs  Runner.hs
components/aihc-cps/: aihc-cps.cabal
components/aihc-cps/src/Aihc/: Cps.hs
components/aihc-cps/test/: Spec.hs
components/aihc-fc/: aihc-fc.cabal
components/aihc-fc/common/: FcEvalGolden.hs  FcGolden.hs
components/aihc-fc/src/Aihc/: Fc.hs
components/aihc-fc/test/: Spec.hs
components/aihc-grin/: aihc-grin.cabal
components/aihc-grin/src/Aihc/: Grin.hs
components/aihc-grin/test/: GrinGolden.hs  Spec.hs
components/aihc-native/: aihc-native.cabal
components/aihc-native/runtime/: aihc_runtime.c  aihc_runtime.h  aihc_snapshot.c
components/aihc-native/src/Aihc/: Native.hs
components/aihc-native/test/: Spec.hs
components/aihc-parser/: CHANGELOG.md  README.md  aihc-parser.cabal
components/aihc-parser-cli/: aihc-parser-cli.cabal
components/aihc-parser-cli/app/aihc-parser-bench/: Main.hs
components/aihc-parser-cli/test/: CLIGolden.hs  Spec.hs
components/aihc-parser-compat/: aihc-parser-compat.cabal
components/aihc-parser-compat/test/: Spec.hs
components/aihc-parser-support/: aihc-parser-support.cabal
components/aihc-parser-support/src/: ParserValidation.hs
components/aihc-parser/app/aihc-lexer/: Main.hs
components/aihc-parser/app/aihc-parser/: Main.hs
components/aihc-parser/app/extension-progress/: Main.hs
components/aihc-parser/app/hackage-tester/: Main.hs
components/aihc-parser/app/parser-progress/: Main.hs
components/aihc-parser/app/parser-quickcheck-batch/: Main.hs
components/aihc-parser/app/stackage-progress/: Main.hs
components/aihc-parser/common/: AstStripping.hs  CLIExtensions.hs  CLIGolden.hs  ConcurrentProgress.hs  CppSupport.hs  ExtensionSupport.hs  GhcCompileCheck.hs  GhcOracle.hs  HackageSupport.hs  HseExtensions.hs  LexerGolden.hs  ModuleShrinker.hs  OracleExtensions.hs  PackageProcessor.hs  ParserEquivalent.hs  ParserErrorGolden.hs  ParserGolden.hs  ParserValidation.hs  RoundtripValidation.hs  ShrinkUtils.hs
components/aihc-parser/common/HackageTester/: CLI.hs  Model.hs  Run.hs
components/aihc-parser/common/ParserQuickCheck/: CLI.hs  Registry.hs  Runner.hs  Types.hs
components/aihc-parser/common/StackageProgress/: Run.hs  Summary.hs
components/aihc-parser/src/: Parser.hs
components/aihc-parser/src/Aihc/: Lexer.hs  Parser.hs
components/aihc-parser/src/Parser/: Ast.hs  Lexer.hs  Pretty.hs  PrettyAST.hs  Types.hs
components/aihc-parser/test/: Spec.hs
components/aihc-parser/test/Test/: Oracle.hs
components/aihc-resolve/: aihc-resolve.cabal
components/aihc-resolve/app/resolve-extension-progress/: Main.hs
components/aihc-resolve/app/resolve-progress/: Main.hs
components/aihc-resolve/app/resolve-stackage-progress/: BootInterface.hs  Main.hs  ResolveStackageProgress.hs
components/aihc-resolve/common/: ResolverGolden.hs
components/aihc-resolve/src/Aihc/: Resolve.hs
components/aihc-resolve/test/: Spec.hs
components/aihc-tc/: aihc-tc.cabal
components/aihc-tc/app/tc-extension-progress/: Main.hs
components/aihc-tc/app/tc-progress/: Main.hs
components/aihc-tc/common/: TcAnnotatedGolden.hs  TcAnnotatedRender.hs  TcGolden.hs
components/aihc-tc/src/Aihc/: Tc.hs
components/aihc-tc/test/: Spec.hs
components/aihc-wasm/: aihc-wasm.cabal
components/aihc-wasm/runtime/: aihc_wasip3.c
components/aihc-wasm/runtime/include/: stdlib.h  string.h
components/aihc-wasm/runtime/wit/: command.wit
components/aihc-wasm/src/Aihc/: Wasm.hs
components/aihc-wasm/test/: Spec.hs
core-libs/aihc-internal/: aihc-internal.cabal
core-libs/aihc-internal/src/GHC/: Tuple.hs
core-libs/aihc-prim/: aihc-prim.cabal
core-libs/aihc-prim/src/GHC/: CString.hs  Classes.hs  Debug.hs  Magic.hs  Prim.hs  PrimopWrappers.hs  Types.hs
tooling/aihc-base-api/: aihc-base-api.cabal
tooling/aihc-base-api/app/: Main.hs
tooling/aihc-base-api/test/: Spec.hs
tooling/aihc-dev/: aihc-dev.cabal
tooling/aihc-dev/app/resolve-stackage-progress/: BootInterface.hs  ResolvePackage.hs  ResolveStackageProgress.hs
tooling/aihc-dev/app/tc-stackage-progress/: TcStackageProgress.hs
tooling/aihc-dev/exe/: Main.hs
tooling/aihc-dev/test/: Spec.hs
tooling/aihc-dev/test/Test/: ExtractHiCompare.hs  Fuzz.hs  GoldenUpdate.hs  ParserBenchReport.hs  ResolvePackage.hs  TcStackageProgress.hs
tooling/aihc-hackage/: aihc-hackage.cabal
tooling/aihc-hackage/test/: Spec.hs
tooling/aihc-parser-tooling-common/: aihc-parser-tooling-common.cabal
tooling/aihc-resolve-tooling-common/: aihc-resolve-tooling-common.cabal
tooling/aihc-resolve-tooling-common/app/resolve-extension-progress/: Main.hs
tooling/aihc-resolve-tooling-common/app/resolve-progress/: Main.hs
tooling/aihc-testing/: aihc-testing.cabal
tooling/aihc-testing/test/: Spec.hs
tooling/ucd2haskell/: aihc-ucd2haskell.cabal
tooling/ucd2haskell/app/: Main.hs
tooling/ucd2haskell/src/: Ucd2Haskell.hs
tooling/ucd2haskell/test/: Spec.hs
(+8868 files in other folders)
