cabal-version: 3.8
name: aihc-arm64
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Native AArch64 backend for AIHC GRIN
data-files:
  runtime/aihc_runtime.c

library
  exposed-modules:
    Aihc.Arm64
    Aihc.Arm64.Codegen
    Aihc.Arm64.Emit
    Aihc.Arm64.Lir
    Aihc.Arm64.RegisterAllocate

  other-modules: Paths_aihc_arm64
  autogen-modules: Paths_aihc_arm64
  hs-source-dirs: src
  build-depends:
    aihc-grin,
    aihc-tc,
    base >=4.16 && <5,
    containers,
    text,
    transformers,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    ../../test/support

  main-is: Spec.hs
  other-modules:
    Aihc.Testing.EvalFixture
    Test.Arm64.Suite

  build-depends:
    aeson,
    aihc-arm64,
    aihc-fc,
    aihc-grin,
    aihc-parser,
    aihc-resolve,
    aihc-tc,
    base >=4.16 && <5,
    containers,
    directory,
    filepath,
    libffi >=0.2 && <0.3,
    process,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    unix,
    yaml,

  ghc-options: -Wall
  default-language: GHC2021
