cabal-version: 3.8
name: aihc-c
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Portable C backend for AIHC GRIN

library
  exposed-modules:
    Aihc.C
    Aihc.C.Codegen

  hs-source-dirs: src
  build-depends:
    aihc-grin,
    aihc-native,
    aihc-tc,
    base >=4.16 && <5,
    bytestring,
    containers,
    text,
    transformers,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    ../../test/support

  main-is: Spec.hs
  other-modules:
    Aihc.Testing.SchedulerProgram
    Test.C.Suite

  build-depends:
    aihc-c,
    aihc-grin,
    aihc-native,
    aihc-tc,
    base >=4.16 && <5,
    directory,
    filepath,
    process,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,

  ghc-options: -Wall
  default-language: GHC2021
