cabal-version: 3.8
name: aihc-cpp
version: 1.0.0.2
build-type: Simple
license: Unlicense
license-file: LICENSE
extra-doc-files: CHANGELOG.md
extra-source-files:
  test/Test/Fixtures/progress/*.hs
  test/Test/Fixtures/progress/*.tsv
  test/Test/Fixtures/progress/includes/*.inc

author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Pure Haskell C preprocessor for aihc
description:
  A pure Haskell C preprocessor for Haskell source files that use CPP. The
  package provides deterministic preprocessing with include continuations and
  oracle-backed tests against cpphs.

homepage: https://github.com/ai-haskell-compiler/aihc/tree/main/components/aihc-cpp
bug-reports: https://github.com/ai-haskell-compiler/aihc/issues

source-repository head
  type: git
  location: https://github.com/ai-haskell-compiler/aihc.git
  subdir: components/aihc-cpp

library
  exposed-modules:
    Aihc.Cpp

  other-modules:
    Aihc.Cpp.Cursor
    Aihc.Cpp.Evaluator
    Aihc.Cpp.Parser
    Aihc.Cpp.Scanner
    Aihc.Cpp.Types

  hs-source-dirs: src
  build-depends:
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    containers >=0.5 && <0.9,
    deepseq >=1.4 && <1.6,
    filepath >=1.3.0.1 && <1.6,
    text >=1.2 && <2.2,

  ghc-options: -Wall
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Test.Progress

  build-depends:
    aihc-cpp >=1.0 && <1.1,
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    containers >=0.5 && <0.9,
    cpphs >=1.20 && <1.21,
    directory >=1.2.3 && <1.5,
    filepath >=1.3.0.1 && <1.6,
    tasty >=1.5 && <1.6,
    tasty-hunit >=0.10 && <0.11,
    tasty-quickcheck >=0.11.1 && <0.12,
    text >=1.2 && <2.2,

  ghc-options: -Wall
  default-language: Haskell2010
