cabal-version: 3.8
name: aihc-cps
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Loom continuation-passing intermediate representation for AIHC

library
  exposed-modules:
    Aihc.Cps
    Aihc.Cps.Lint
    Aihc.Cps.Lower
    Aihc.Cps.Pretty
    Aihc.Cps.Syntax

  hs-source-dirs: src
  build-depends:
    aihc-grin,
    aihc-tc,
    base >=4.16 && <5,
    containers,
    text >=1.2,
    transformers,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    aihc-cps,
    aihc-grin,
    aihc-tc,
    base >=4.16 && <5,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,

  ghc-options: -Wall
  default-language: GHC2021
