cabal-version: 3.8
name: aihc-grin
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Strict graph-reduction intermediate language for AIHC

library
  exposed-modules:
    Aihc.Grin
    Aihc.Grin.Cps
    Aihc.Grin.Gc
    Aihc.Grin.Interpret
    Aihc.Grin.Lint
    Aihc.Grin.Lower
    Aihc.Grin.Parser
    Aihc.Grin.Pretty
    Aihc.Grin.Snapshot
    Aihc.Grin.Syntax

  other-modules:
    Aihc.Grin.Analysis

  hs-source-dirs: src
  build-depends:
    aihc-fc,
    aihc-tc,
    base >=4.16 && <5,
    bytestring,
    containers,
    libffi >=0.2 && <0.3,
    megaparsec >=9.0 && <10,
    text >=1.2,
    transformers,
    unix,

  ghc-options: -Wall
  default-language: GHC2021

library fuzz
  visibility: public
  hs-source-dirs:
    fuzz
    test

  exposed-modules:
    Aihc.Grin.Fuzz

  other-modules:
    Test.Grin.Arbitrary

  build-depends:
    QuickCheck,
    aihc-grin,
    aihc-tc,
    base >=4.16 && <5,
    bytestring,
    tasty-quickcheck,
    text,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    ../../test/support

  main-is: Spec.hs
  other-modules:
    Aihc.Testing.EvalFixture
    GrinGolden
    Test.Grin.Arbitrary
    Test.Grin.Suite

  build-depends:
    aeson,
    aihc-fc,
    aihc-grin,
    aihc-parser,
    aihc-resolve,
    aihc-tc,
    base >=4.16 && <5,
    bytestring,
    containers,
    directory,
    filepath,
    libffi >=0.2 && <0.3,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    unix,
    yaml,

  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: GHC2021
