cabal-version: 3.8
name: aihc-native
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Shared native compilation support for AIHC
data-files:
  runtime/aihc_runtime.c
  runtime/aihc_runtime.h
  runtime/aihc_snapshot.c

library
  exposed-modules:
    Aihc.Native
    Aihc.Native.Lir
    Aihc.Native.RegisterAllocate

  other-modules: Paths_aihc_native
  autogen-modules: Paths_aihc_native
  hs-source-dirs: src
  build-depends:
    aihc-grin,
    base >=4.16 && <5,
    containers,
    text,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Test.Native.RegisterAllocate
  build-depends:
    aihc-native,
    base >=4.16 && <5,
    containers,
    tasty,
    tasty-hunit,
    tasty-quickcheck,

  ghc-options: -Wall
  default-language: GHC2021
