cabal-version: 3.8
name: aihc-native
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Shared backend compilation support for AIHC
data-files:
  runtime/aihc_runtime.c
  runtime/aihc_runtime.h
  runtime/aihc_snapshot.c

library
  exposed-modules:
    Aihc.Native
    Aihc.Native.RegisterAllocate

  other-modules: Paths_aihc_native
  autogen-modules: Paths_aihc_native
  hs-source-dirs: src
  build-depends:
    aihc-grin,
    aihc-tc,
    base >=4.16 && <5,
    bytestring,
    containers,
    text,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Test.Native.RegisterAllocate
  build-depends:
    aihc-grin,
    aihc-native,
    aihc-tc,
    base >=4.16 && <5,
    containers,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,

  ghc-options: -Wall
  default-language: GHC2021
