cabal-version:      3.8
name:               aihc-parser-cli
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             David Himmelstrup
maintainer:         lemmih@gmail.com
category:           Compilers
synopsis:           CLI interface for aihc-parser and aihc-lexer

library
  exposed-modules:
      Aihc.Parser.CLI.Parser
    , Aihc.Parser.CLI.Bench
    , Aihc.Parser.Run
    , Aihc.Parser.Bench.CLI
    , Aihc.Parser.Bench.Parsers
    , Aihc.Parser.Bench.Tarball
    , Aihc.Parser.Bench.Benchmark
    , Aihc.Parser.Bench.Metrics
  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <5
    , aihc-cpp
    , aihc-hackage
    , aihc-parser
    , text >=1.2
    , optparse-applicative
    , prettyprinter
    -- Dependencies for bench modules:
    , aeson
    , bytestring
    , Cabal-syntax >= 3.14 && < 3.17
    , containers
    , deepseq
    , directory
    , filepath
    , ghc-lib-parser
    , haskell-src-exts
    , http-client
    , http-client-tls
    , tar
    , time
    , zlib
  ghc-options:        -Wall
  default-language: GHC2021

executable aihc-parser
  hs-source-dirs:     app/aihc-parser
  main-is:            Main.hs
  build-depends:
      base >=4.16 && <5
    , aihc-parser-cli
  ghc-options:        -Wall
  default-language:   Haskell2010

executable aihc-parser-bench
  hs-source-dirs:     app/aihc-parser-bench
  main-is:            Main.hs
  build-depends:
      base >=4.16 && <5
    , aihc-parser-cli
  ghc-options:        -Wall -rtsopts "-with-rtsopts=-T"
  default-language:   Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
      CLIGolden
    , Test.CLI.Suite
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-parser-cli
    , text
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , yaml
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
