cabal-version: 3.8
name: aihc-parser-cli
version: 0.1.0.0
build-type: Simple
license: MIT
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Compilers
synopsis: CLI interface for aihc-parser and aihc-lexer

library
  exposed-modules:
    Aihc.Parser.Bench.Benchmark
    Aihc.Parser.Bench.CLI
    Aihc.Parser.Bench.Metrics
    Aihc.Parser.Bench.Parsers
    Aihc.Parser.Bench.Tarball
    Aihc.Parser.CLI.Bench
    Aihc.Parser.CLI.Parser
    Aihc.Parser.Run

  hs-source-dirs: src
  build-depends:
    -- Dependencies for bench modules:
    Cabal-syntax >=3.14 && <3.17,
    aeson,
    aihc-cpp,
    aihc-hackage,
    aihc-parser,
    base >=4.16 && <5,
    bytestring,
    containers,
    deepseq,
    directory,
    filepath,
    ghc-lib-parser,
    haskell-src-exts,
    http-client,
    http-client-tls,
    optparse-applicative,
    prettyprinter,
    tar,
    text >=1.2,
    time,
    zlib,

  ghc-options: -Wall
  default-language: GHC2021

executable aihc-parser
  hs-source-dirs: app/aihc-parser
  main-is: Main.hs
  build-depends:
    aihc-parser-cli,
    base >=4.16 && <5,

  ghc-options: -Wall
  default-language: Haskell2010

executable aihc-parser-bench
  hs-source-dirs: app/aihc-parser-bench
  main-is: Main.hs
  build-depends:
    aihc-parser-cli,
    base >=4.16 && <5,

  ghc-options:
    -Wall
    -rtsopts
    -with-rtsopts=-T

  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    CLIGolden
    Test.CLI.Suite

  build-depends:
    aeson,
    aihc-parser,
    aihc-parser-cli,
    base >=4.16 && <5,
    bytestring,
    containers,
    directory,
    filepath,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    yaml,

  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: Haskell2010
