cabal-version: 3.8
name: aihc-parser-compat
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Compatibility conversion from aihc-parser ASTs to ghc-lib-parser ASTs

flag fuzz
  description: Build the developer-only QuickCheck property registry
  default: False
  manual: True

library
  exposed-modules:
    Aihc.Parser.Compat
    Aihc.Parser.Compat.Internal.Testing

  other-modules:
    Aihc.Parser.Compat.Internal.Convert
    Aihc.Parser.Compat.Internal.Ghc

  hs-source-dirs: src
  build-depends:
    aihc-parser,
    base >=4.16 && <5,
    bytestring,
    containers,
    ghc-lib-parser,
    prettyprinter,
    text >=1.2,

  ghc-options: -Wall
  default-language: GHC2021

library fuzz
  if !flag(fuzz)
    buildable: False
  visibility: public
  hs-source-dirs:
    fuzz
    test

  exposed-modules:
    Aihc.Parser.Compat.Fuzz

  other-modules:
    Test.Compat.Decl
    Test.Compat.Expr

  build-depends:
    QuickCheck,
    aihc-parser,
    aihc-parser:fuzz,
    aihc-parser-compat,
    base >=4.16 && <5,
    bytestring,
    containers,
    ghc-lib-parser,
    prettyprinter,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text >=1.2,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    ../aihc-parser/test
    src

  main-is: Spec.hs
  other-modules:
    Aihc.Parser.Compat
    Aihc.Parser.Compat.Internal.Convert
    Aihc.Parser.Compat.Internal.Ghc
    Aihc.Parser.Compat.Internal.Testing
    Test.Compat.Decl
    Test.Compat.Expr
    Test.Properties.Arb.Decl
    Test.Properties.Arb.Expr
    Test.Properties.Arb.Identifiers
    Test.Properties.Arb.Module
    Test.Properties.Arb.Pattern
    Test.Properties.Arb.Type
    Test.Properties.Arb.Utils

  build-depends:
    QuickCheck,
    aihc-parser,
    base >=4.16 && <5,
    bytestring,
    containers,
    ghc-lib-parser,
    prettyprinter,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text >=1.2,

  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: GHC2021
