cabal-version:      3.8
name:               aihc-parser
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             David Himmelstrup
maintainer:         lemmih@gmail.com
category:           Compilers
synopsis:           From-scratch Haskell parser with differential tests

library
  exposed-modules:
      Aihc.Parser
    , Aihc.Parser.Syntax
    , Aihc.Parser.Lex
    , Aihc.Parser.Shorthand
  other-modules:
      Aihc.Parser.Parens
    , Aihc.Parser.Pretty
    , Aihc.Parser.Types
    , Aihc.Parser.Lex.Header
    , Aihc.Parser.Lex.Layout
    , Aihc.Parser.Lex.Numbers
    , Aihc.Parser.Lex.Pragmas
    , Aihc.Parser.Lex.Quoted
    , Aihc.Parser.Lex.Trivia
    , Aihc.Parser.Lex.Types
    , Aihc.Parser.Internal.CheckPattern
    , Aihc.Parser.Internal.Cmd
    , Aihc.Parser.Internal.Common
    , Aihc.Parser.Internal.Expr
    , Aihc.Parser.Internal.Decl
    , Aihc.Parser.Internal.Import
    , Aihc.Parser.Internal.Module
    , Aihc.Parser.Internal.Pattern
    , Aihc.Parser.Internal.Type
    , Aihc.Parser.Internal.FromTokens
  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <5
    , text >=1.2
    , containers
    , bytestring
    , deepseq
    , megaparsec
    , prettyprinter
  ghc-options:        -Wall
  default-language: GHC2021

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:
      test
    , app/stackage-progress
    , common
    , src
  main-is:          Spec.hs
  other-modules:
      Aihc.Parser
    , Aihc.Parser.Syntax
    , Aihc.Parser.Lex
    , Aihc.Parser.Shorthand
    , Aihc.Parser.Parens
    , Aihc.Parser.Pretty
    , Aihc.Parser.Types
    , Aihc.Parser.Lex.Header
    , Aihc.Parser.Lex.Layout
    , Aihc.Parser.Lex.Numbers
    , Aihc.Parser.Lex.Pragmas
    , Aihc.Parser.Lex.Quoted
    , Aihc.Parser.Lex.Trivia
    , Aihc.Parser.Lex.Types
    , Aihc.Parser.Internal.CheckPattern
    , Aihc.Parser.Internal.Cmd
    , Aihc.Parser.Internal.Common
    , Aihc.Parser.Internal.Expr
    , Aihc.Parser.Internal.Decl
    , Aihc.Parser.Internal.Import
    , Aihc.Parser.Internal.Module
    , Aihc.Parser.Internal.Pattern
    , Aihc.Parser.Internal.Type
    , Aihc.Parser.Internal.FromTokens
    , CppSupport
    , ExtensionSupport
    , GhcOracle
    , HackageSupport
    , HackageTester.CLI
    , HackageTester.Model
    , HseExtensions
    , LexerGolden
    , ParserErrorGolden
    , ParserGolden
    , ParserValidation
    , ShrinkUtils
    , StackageProgress.CLI
    , StackageProgress.Summary
    , StackageProgress.FileCheckerTiming
    , Test.ErrorMessages.Suite
    , Test.Oracle.Suite
    , Test.Performance.Suite
    , Test.ExtensionMapping.Suite
    , Test.HackageTester.Suite
    , Test.Lexer.Suite
    , Test.Properties.Arb.Decl
    , Test.Properties.Arb.Expr
    , Test.Properties.Arb.Identifiers
    , Test.Properties.Arb.Module
    , Test.Properties.Arb.Pattern
    , Test.Properties.Arb.Type
    , Test.Properties.Coverage
    , Test.Properties.DeclRoundTrip
    , Test.Properties.ExprHelpers
    , Test.Properties.ExprRoundTrip
    , Test.Properties.Identifiers
    , Test.Properties.ModuleRoundTrip
    , Test.Properties.NoExceptions
    , Test.Properties.PatternRoundTrip
    , Test.Properties.TypeRoundTrip
    , Test.Parser.Suite
    , Test.StackageProgress.FileCheckerTiming
    , Test.StackageProgress.Summary
  build-depends:
      base >=4.16 && <5
    , aihc-cpp
    , aihc-hackage
    , megaparsec
    , text
    , containers
    , directory
    , filepath
    , deepseq
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , ghc-lib-parser
    , Cabal-syntax >= 3.14 && < 3.17
    , haskell-src-exts
    , aeson
    , bytestring
    , prettyprinter
    , process
    , yaml
    , optparse-applicative
    , template-haskell
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021

executable parser-progress
  hs-source-dirs:
      app/parser-progress
    , common
  main-is:          Main.hs
  other-modules:
      CppSupport
    , ExtensionSupport
    , ParserValidation
    , GhcOracle
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , aihc-hackage
    , bytestring
    , text
    , containers
    , directory
    , filepath
    , ghc-lib-parser
    , Cabal-syntax >= 3.14 && < 3.17
    , prettyprinter
  ghc-options:        -Wall
  default-language: GHC2021

executable lexer-progress
  hs-source-dirs:
      app/lexer-progress
    , common
  main-is:          Main.hs
  other-modules:
      LexerGolden
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , text
    , bytestring
    , containers
    , directory
    , filepath
    , aeson
    , yaml
  ghc-options:        -Wall
  default-language: GHC2021

executable extension-progress
  hs-source-dirs:
      app/extension-progress
    , common
  main-is:          Main.hs
  other-modules:
      CppSupport
    , ExtensionSupport
    , ParserValidation
    , GhcOracle
    , ParserGolden
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , aihc-hackage
    , text
    , containers
    , directory
    , filepath
    , ghc-lib-parser
    , Cabal-syntax >= 3.14 && < 3.17
    , megaparsec
    , prettyprinter
    , yaml
    , aeson
    , bytestring
  ghc-options:        -Wall
  default-language: GHC2021

executable hackage-tester
  hs-source-dirs:
      app/hackage-tester
    , common
  main-is:          Main.hs
  other-modules:
      ConcurrentProgress
    , CppSupport
    , GhcOracle
    , HackageSupport
    , HackageTester.CLI
    , HackageTester.Model
    , HseExtensions
    , ParserValidation
    , ShrinkUtils
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , aihc-hackage
    , text
    , containers
    , deepseq
    , directory
    , filepath
    , ghc-lib-parser
    , Cabal-syntax >= 3.14 && < 3.17
    , bytestring
    , async
    , aeson
    , http-client
    , http-client-tls
    , optparse-applicative
    , haskell-src-exts
    , prettyprinter
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021

executable stackage-progress
  hs-source-dirs:
      app/stackage-progress
    , common
  main-is:          Main.hs
  other-modules:
      ConcurrentProgress
    , CppSupport
    , GhcOracle
    , HackageSupport
    , HseExtensions
    , ParserValidation
    , ShrinkUtils
    , StackageProgress.CLI
    , StackageProgress.FileChecker
    , StackageProgress.FileCheckerTiming
    , StackageProgress.PackageRunner
    , StackageProgress.Snapshot
    , StackageProgress.Summary
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , aihc-hackage
    , text
    , containers
    , deepseq
    , directory
    , filepath
    , ghc-lib-parser
    , async
    , Cabal-syntax >= 3.14 && < 3.17
    , bytestring
    , haskell-src-exts
    , optparse-applicative
    , prettyprinter
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
