cabal-version: 3.8
name: aihc-parser
version: 0.1.0.0
build-type: Simple
license: MIT
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Compilers
synopsis: From-scratch Haskell parser with differential tests

library
  exposed-modules:
    Aihc.Parser
    Aihc.Parser.Lex
    Aihc.Parser.Parens
    Aihc.Parser.Shorthand
    Aihc.Parser.Syntax

  other-modules:
    Aihc.Parser.Internal.CheckPattern
    Aihc.Parser.Internal.Cmd
    Aihc.Parser.Internal.Common
    Aihc.Parser.Internal.Decl
    Aihc.Parser.Internal.Expr
    Aihc.Parser.Internal.FromTokens
    Aihc.Parser.Internal.Import
    Aihc.Parser.Internal.Module
    Aihc.Parser.Internal.Pattern
    Aihc.Parser.Internal.Type
    Aihc.Parser.Lex.Header
    Aihc.Parser.Lex.Layout
    Aihc.Parser.Lex.Numbers
    Aihc.Parser.Lex.Pragmas
    Aihc.Parser.Lex.Quoted
    Aihc.Parser.Lex.Trivia
    Aihc.Parser.Lex.Types
    Aihc.Parser.Pretty
    Aihc.Parser.Types

  hs-source-dirs: src
  build-depends:
    base >=4.16 && <5,
    bytestring,
    containers,
    deepseq,
    megaparsec,
    prettyprinter,
    text >=1.2,

  ghc-options: -Wall
  default-language: GHC2021

library parser-tooling-common
  visibility: public
  hs-source-dirs: common
  exposed-modules:
    ConcurrentProgress
    CppSupport
    ExtensionSupport
    GhcOracle
    HackageSupport
    HackageTester.CLI
    HackageTester.Model
    HseExtensions
    LexerGolden
    ParserErrorGolden
    ParserGolden
    ParserValidation
    ShrinkUtils
    StackageProgress.Summary

  build-depends:
    Cabal-syntax >=3.14 && <3.17,
    Diff,
    aeson >=2.0 && <2.3,
    aihc-cpp,
    aihc-hackage,
    aihc-parser,
    async,
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    containers >=0.5 && <0.8,
    deepseq,
    directory >=1.2.3 && <1.5,
    filepath >=1.3.0.1 && <1.6,
    ghc-lib-parser,
    haskell-src-exts,
    http-client,
    http-client-tls,
    megaparsec,
    optparse-applicative >=0.16 && <0.19,
    prettyprinter,
    text >=1.2.3 && <2.2,
    yaml,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    common
    src

  main-is: Spec.hs
  other-modules:
    Aihc.Parser
    Aihc.Parser.Internal.CheckPattern
    Aihc.Parser.Internal.Cmd
    Aihc.Parser.Internal.Common
    Aihc.Parser.Internal.Decl
    Aihc.Parser.Internal.Expr
    Aihc.Parser.Internal.FromTokens
    Aihc.Parser.Internal.Import
    Aihc.Parser.Internal.Module
    Aihc.Parser.Internal.Pattern
    Aihc.Parser.Internal.Type
    Aihc.Parser.Lex
    Aihc.Parser.Lex.Header
    Aihc.Parser.Lex.Layout
    Aihc.Parser.Lex.Numbers
    Aihc.Parser.Lex.Pragmas
    Aihc.Parser.Lex.Quoted
    Aihc.Parser.Lex.Trivia
    Aihc.Parser.Lex.Types
    Aihc.Parser.Parens
    Aihc.Parser.Pretty
    Aihc.Parser.Shorthand
    Aihc.Parser.Syntax
    Aihc.Parser.Types
    CppSupport
    ExtensionSupport
    GhcOracle
    HackageSupport
    HackageTester.CLI
    HackageTester.Model
    HseExtensions
    LexerGolden
    ParserErrorGolden
    ParserGolden
    ParserValidation
    ShrinkUtils
    StackageProgress.Summary
    Test.ErrorMessages.Suite
    Test.ExtensionMapping.Suite
    Test.HackageTester.Suite
    Test.Lexer.Suite
    Test.Oracle.Suite
    Test.Parser.Suite
    Test.Performance.Suite
    Test.Properties.Arb.Decl
    Test.Properties.Arb.Expr
    Test.Properties.Arb.Identifiers
    Test.Properties.Arb.Module
    Test.Properties.Arb.Pattern
    Test.Properties.Arb.Type
    Test.Properties.Arb.Utils
    Test.Properties.Coverage
    Test.Properties.DeclRoundTrip
    Test.Properties.ExprHelpers
    Test.Properties.ExprRoundTrip
    Test.Properties.Identifiers
    Test.Properties.ModuleRoundTrip
    Test.Properties.NoExceptions
    Test.Properties.PatternRoundTrip
    Test.Properties.ShorthandSubset
    Test.Properties.TypeRoundTrip
    Test.StackageProgress.Summary

  build-depends:
    Cabal-syntax >=3.14 && <3.17,
    Diff,
    QuickCheck,
    aeson,
    aihc-cpp,
    aihc-hackage,
    base >=4.16 && <5,
    bytestring,
    containers,
    deepseq,
    directory,
    filepath,
    ghc-lib-parser,
    haskell-src-exts,
    megaparsec,
    optparse-applicative,
    prettyprinter,
    process,
    tasty,
    tasty-hunit,
    tasty-quickcheck >=0.11.1 && <0.12,
    template-haskell,
    text,
    yaml,

  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: GHC2021

executable parser-progress
  hs-source-dirs:
    app/parser-progress

  main-is: Main.hs
  build-depends:
    Cabal-syntax >=3.14 && <3.17,
    Diff,
    aihc-cpp,
    aihc-hackage,
    aihc-parser,
    aihc-parser:parser-tooling-common,
    base >=4.16 && <5,
    bytestring,
    containers,
    deepseq,
    directory,
    filepath,
    ghc-lib-parser,
    prettyprinter,
    text,

  ghc-options: -Wall
  default-language: GHC2021

executable lexer-progress
  hs-source-dirs:
    app/lexer-progress

  main-is: Main.hs
  build-depends:
    aeson,
    aihc-parser,
    aihc-parser:parser-tooling-common,
    base >=4.16 && <5,
    bytestring,
    containers,
    directory,
    filepath,
    text,
    yaml,

  ghc-options: -Wall
  default-language: GHC2021

executable extension-progress
  hs-source-dirs:
    app/extension-progress

  main-is: Main.hs
  build-depends:
    Cabal-syntax >=3.14 && <3.17,
    Diff,
    aeson,
    aihc-cpp,
    aihc-hackage,
    aihc-parser,
    aihc-parser:parser-tooling-common,
    base >=4.16 && <5,
    bytestring,
    containers,
    deepseq,
    directory,
    filepath,
    ghc-lib-parser,
    megaparsec,
    prettyprinter,
    text,
    yaml,

  ghc-options: -Wall
  default-language: GHC2021
